--- a/LOGI.css
+++ b/LOGI.css
@@ -1,74 +1,81 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-}
-
-body{
-    margin: 0;
-    padding: 0;
+* {
     box-sizing: border-box;
 }
-/*header & nav*/
 
-.main-header{
+body {
+    margin: 0;
+}
+
+.main-header {
     background-color: #2ddf5c;
     width: 100%;
     padding: 15px 10px;
-}
-
-.main-header > div{
-    display: inline-block;
-    vertical-align: middle;
+    /* position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 3; */
 }
 
 .brand-logo{
+    display: inline-block;
     text-decoration: none;
     color: #0e4f1f;
-    font-size: 32px;
     font-weight: bold;
+    font-size: 32px;
+    vertical-align: middle;
 }
 
-.main-nav{
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main-header > div {
+    display: inline-block;
+}
+
+.main-nav {
     display: inline-block;
     vertical-align: middle;
-    width: calc(100% - 116px);
 }
 
-.main-nav-links{
-    padding: 0;
+.main-nav-links {
     list-style: none;
-    text-align: right;
+    padding: 0;
 }
 
-.main-nav-link{
-    display: inline-block;
-    margin: 0 16px;
+.main-nav-link {
+    display: inline;
+    padding: 10px 20px;
 }
 
-.main-nav-link > a{
+.main-nav-link a {
     text-decoration: none;
-    color: #0e4f1f;
+    color: rgb(70, 63, 63);
+    font-size: 20px;
 }
 
-.main-nav-link-cta > a{
-    background-color: rgb(255, 0, 0);
-    color: #ffffff;
+.main-nav-link-cta a {
+    color: white;
+    background-color: red;
     padding: 8px 16px;
-    border-radius: 16px;
+    border-radius: 20px;
 }
 
-.main-nav-link > a:hover{
-    color: #ffffff;
-    border-bottom: 2px #ffffff solid;
+.main-nav-link a:hover {
+    color: white;
+    border-bottom: 1px solid white;
 }
 
-.main-nav-link-cta > a:hover{
-    color: red;
-    background-color: #ffffff;
+.main-nav-link-cta a:hover {
     border: none;
+    color: red;
+    background-color: white;
 }
 
-/**/
+/*overview*/
+
 .overview{
     background-color: rgba(255, 41, 41, 0.7);
     height: 480px;
