--- a/LOGI.css
+++ b/LOGI.css
@@ -1,81 +1,4 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-}
-
-.main-header {
-    background-color: #2ddf5c;
-    width: 100%;
-    padding: 15px 10px;
-    /* position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 3; */
-}
-
-.brand-logo{
-    display: inline-block;
-    text-decoration: none;
-    color: #0e4f1f;
-    font-weight: bold;
-    font-size: 32px;
-    vertical-align: middle;
-}
-
-.main-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.main-header > div {
-    display: inline-block;
-}
-
-.main-nav {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.main-nav-links {
-    list-style: none;
-    padding: 0;
-}
-
-.main-nav-link {
-    display: inline;
-    padding: 10px 20px;
-}
-
-.main-nav-link a {
-    text-decoration: none;
-    color: rgb(70, 63, 63);
-    font-size: 20px;
-}
-
-.main-nav-link-cta a {
-    color: white;
-    background-color: red;
-    padding: 8px 16px;
-    border-radius: 20px;
-}
-
-.main-nav-link a:hover {
-    color: white;
-    border-bottom: 1px solid white;
-}
-
-.main-nav-link-cta a:hover {
-    border: none;
-    color: red;
-    background-color: white;
-}
-
 /*overview*/
-
 .overview{
     background-color: rgba(255, 41, 41, 0.7);
     height: 480px;
@@ -88,9 +11,10 @@ body {
 
 .overview > h1{
     font-weight: bolder;
-    padding: 40px;
+    padding: 60px;
     font-size: 40px;
     color: #fff;
+    position: ;
 }
 
 .plans-title{
@@ -112,7 +36,7 @@ body {
 
 .plan{
     display: inline-block;
-    width: 30%;
+    width: 25%;
     background-color: #d5ffdc;
     padding: 16px;
     margin: 8px;
@@ -290,5 +214,4 @@ footer{
     text-align: center;
     font-size: larger;
 
-}
 }
