--- a/LOGI.css
+++ b/LOGI.css
@@ -143,12 +143,13 @@ button:hover{
 
 #key-features{
     background-color: gray;
-    height: 240px;
+    height: 300px;
     color: #fff;
     padding: 10px 0;
     text-align: center;
     font-size: larger;
     margin-top: 50px;
+    
 
 }
 
@@ -210,7 +211,8 @@ span{
 footer{
     background-color: #424242;
     color: #ffffff;
-    padding: 16px 0;
+    padding: 16px;
+    margin-top: auto;
     text-align: center;
     font-size: larger;
 
