--- a/shared.css
+++ b/shared.css
@@ -1,62 +1,75 @@
-.main-header{
+* {
+    box-sizing: border-box;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+body {
+    margin: 0;
+}
+
+.main-header {
     background-color: #2ddf5c;
     width: 100%;
     padding: 15px 10px;
-    position: fixed;
-    top: 0;
+    /* position: fixed;
     left: 0;
-    z-index: 2;
-    
-}
-
-.main-header > div{
-    display: inline-block;
-    vertical-align: middle;
+    top: 0;
+    z-index: 3; */
 }
 
 .brand-logo{
+    display: inline-block;
     text-decoration: none;
     color: #0e4f1f;
-    font-size: 32px;
     font-weight: bold;
+    font-size: 32px;
+    vertical-align: middle;
 }
 
-.main-nav{
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main-header > div {
+    display: inline-block;
+}
+
+.main-nav {
     display: inline-block;
     vertical-align: middle;
-    width: calc(100% - 116px);
 }
 
-.main-nav-links{
-    padding: 0;
+.main-nav-links {
     list-style: none;
-    text-align: right;
+    padding: 0;
 }
 
-.main-nav-link{
-    display: inline-block;
-    margin: 0 16px;
+.main-nav-link {
+    display: inline;
+    padding: 10px 20px;
 }
 
-.main-nav-link > a{
+.main-nav-link a {
     text-decoration: none;
-    color: #0e4f1f;
+    color: rgb(70, 63, 63);
+    font-size: 20px;
 }
 
-.main-nav-link-cta > a{
-    background-color: rgb(255, 0, 0);
-    color: #ffffff;
+.main-nav-link-cta a {
+    color: white;
+    background-color: red;
     padding: 8px 16px;
-    border-radius: 16px;
+    border-radius: 20px;
 }
 
-.main-nav-link > a:hover{
-    color: #ffffff;
-    border-bottom: 2px #ffffff solid;
+.main-nav-link a:hover {
+    color: white;
+    border-bottom: 1px solid white;
 }
 
-.main-nav-link-cta > a:hover{
-    color: red;
-    background-color: #ffffff;
+.main-nav-link-cta a:hover {
     border: none;
-}
+    color: red;
+    background-color: white;
