--- a/join-now.css
+++ b/join-now.css
@@ -1,3 +1,4 @@
+
 /*body*/
 
 form {
@@ -43,4 +44,4 @@ input[type = submit] {
     background-color: #0e4f1f;
     color: white;
     border-radius: 7px;
-
+}
