--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@
 }
 
 
-
 .plan>h2:hover{
     background-color: white;
     color: #19b84c;
@@ -99,7 +98,7 @@
     background-color: white;
     color: #19b84c;
     border-radius: 8px;
-    padding: 5px;
+    padding: 9px;
     box-shadow: 4px 4px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
@@ -143,12 +142,14 @@ button:hover{
 
 #key-features{
     background-color: gray;
-    height: 300px;
+    background-size: ;
+    height: 400px;
     color: #fff;
     padding: 10px 0;
     text-align: center;
     font-size: larger;
     margin-top: 50px;
+
     
 
 }
@@ -200,13 +201,19 @@ span{
     background-color: #fff;
     transform: translateY(-13px);
 }
+
+.span{
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .key-features-title{
     color: #0e4f1f;
     text-align: center;
 
 }
 
-
+/*footer*/
 
 footer{
     background-color: #424242;
@@ -215,5 +222,41 @@ footer{
     margin-top: auto;
     text-align: center;
     font-size: larger;
+
+}
+
+/*queries*/
+
+@media(min-width: 375px),(max-width: 667px){
+
+    *{
+        display: flex;
+    }
+
+    .overview{
+        height: 50vh;
+    }
+
+    .plan{
+        display: block;
+        width: 100%;
+        margin: 16px 0;
+
+    }
+
+    .plan-highlighted{
+        box-shadow: none;
+    }
+
+    #key-features{
+        display: block;
+        width: 100%;
+        margin: 24px 0;
+    }
+
+    .key-features-list{
+        display: block;
+        width: 100%;
+    }
 
 }
